data/derived/comb/progs/unify/prog0979.ml.out
Characters 168-172:
  in (i + 1, ( bigAdd acc (temp * (mulByTen i)))) in
                           ^^^^
Error: This expression has type int list
       but an expression was expected of type int
